# NovelRT.Sdk

./: .gitignore  LICENCE.md  NovelRT.Sdk.sln
NovelRT.Sdk/: BuildType.cs  Class1.cs  EngineSelector.cs  Globals.cs  NovelRT.Sdk.csproj  ProjectBuilder.cs  ProjectGenerator.cs  Publisher.cs
NovelRT.Sdk.Console/: GlobalOptions.cs  NewCommand.cs  NovelRT.Sdk.Console.csproj  Program.cs  PublishCommand.cs
NovelRT.Sdk.Console/Commands/: BuildCommand.cs  NewCommand.cs  PublishCommand.cs
NovelRT.Sdk.Console/Properties/PublishProfiles/: FolderProfile.pubxml
NovelRT.Sdk.Console/Util/: ProgramLocators.cs
NovelRT.Sdk/Enums/: BuildType.cs  Platform.cs
NovelRT.Sdk/Models/: Project.cs  ProjectDefinition.cs  Release.cs  ReleaseAsset.cs  ReleaseAuthor.cs  ReleaseUploader.cs
NovelRT.Sdk/Project/: ConanHandler.cs  ProjectBuilder.cs  ProjectGenerator.cs  ProjectSourceBuilder.cs
NovelRT.Sdk/TemplateFiles/: conanfile.py
NovelRT.Sdk/TemplateFiles/CMakeTemplate/: CMakeLists.txt
NovelRT.Sdk/TemplateFiles/CMakeTemplate/cmake/: CopyDirectoryRaw.cmake
NovelRT.Sdk/TemplateFiles/CMakeTemplate/src/: CMakeLists.txt
NovelRT.Sdk/TemplateFiles/CMakeTemplate/src/PROJECT_NAME/: CMakeLists.txt  main.cpp
